updating font size note in model.tex

--- a/MODEL.tex
+++ b/MODEL.tex
@@ -1,4 +1,5 @@
-% 36.00 pt
+% render with latexit and then export as png, default settings
+% 18.00 pt
 % \usepackage{amssymb, amsmath, bm}
 \begin{align}
 %
