adding note for building on retina display

--- a/MODEL.tex
+++ b/MODEL.tex
@@ -1,5 +1,6 @@
 % render with latexit and then export as png, default settings
-% 18.00 pt
+% 18.00 pt (std display)
+%  9.00 pt (retina display)
 % \usepackage{amssymb, amsmath, bm}
 \begin{align}
 %
