adding ref bus to model, closes #2

--- a/MODEL.tex
+++ b/MODEL.tex
@@ -10,7 +10,8 @@
 & \bm {v^l}_i, \bm {v^u}_i \;\; \forall i \in N \nonumber \\
 & \bm S^d_i, \bm Y^s_{i} \;\; \forall i \in N \nonumber \\
 & \bm Y_{ij}, \bm {b^c}_{ij}, \bm{T}_{ij} \;\; \forall (i,j) \in E \nonumber \\
-& \bm {s^u}_{ij}, \bm {\theta^{\Delta l}}_{ij}, \bm {\theta^{\Delta u}}_{ij} \;\; \forall (i,j) \in E  \nonumber \\
+& \bm {s^u}_{ij}, \bm {\theta^{\Delta l}}_{ij}, \bm {\theta^{\Delta u}}_{ij} \;\; \forall (i,j) \in E \nonumber \\
+& \bm r \nonumber \\
 %
 \mbox{\bf variables: } & \nonumber \\
 & S^g_k \;\; \forall k\in G \nonumber \\
@@ -20,6 +21,7 @@
 \mbox{\bf minimize: } & \sum_{k \in G} \bm c_{2k} (\Re(S^g_k))^2 + \bm c_{1k}\Re(S^g_k) + \bm c_{0k} \\
 %
 \mbox{\bf subject to: } & \nonumber \\
+& \angle V_{\bm r} = 0 \\
 & \bm {S^{gl}}_k \leq S^g_k \leq \bm {S^{gu}}_k \;\; \forall k \in G  \\
 & \bm {v^l}_i \leq |V_i| \leq \bm {v^u}_i \;\; \forall i \in N \\
 & \sum_{\substack{k \in G_i}} S^g_k - {\bm S^d_i} - \bm Y^s_{i} |V_i|^2 = \sum_{\substack{(i,j)\in E_i \cup E_i^R}} S_{ij} \;\; \forall i\in N \\ 
